--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -79,6 +79,10 @@ stages:
             displayName: 'Download failure logs'
 
           - script: |
+              ls -la /app/
+              which python3
+
+          - script: |
               # Start Ollama (models already downloaded)
               ollama serve &
               sleep 5
@@ -102,7 +106,7 @@ stages:
               for log in $(System.DefaultWorkingDirectory)/test-failures/*.log; do
                 if [ -f "$log" ]; then
                   echo "📊 Analyzing: $(basename $log)"
-                  python3 cli.py analyze "$log" --no-llm >> $(System.DefaultWorkingDirectory)/triage-report.md
+                  python3 /app/cli.py analyze "$log" --no-llm >> $(System.DefaultWorkingDirectory)/triage-report.md
                   echo "" >> $(System.DefaultWorkingDirectory)/triage-report.md
                 fi
               done
